vendor/ouroboros/examples/src/fail_tests/reborrow_external_ref.rs
use ouroboros::self_referencing;

#[self_referencing]
struct ReborrowExternalRef<'a> {
    external: &'a str,
    #[borrows(external)]
    reborrowed: &'this str,
}

fn main() {

}
